crates/plotnik-lib/tests/02-parser/recovery_unexpected/type_annotation_on_suppressive_capture.txt
Q = (a (b) @_ :: Foo)
------------------ DIAGNOSTICS -------------------
error: expected a child node, or `)` to close
 --> query.ptk:1:15
  |
1 | Q = (a (b) @_ :: Foo)
  |               ^^

error: references must be parenthesized
 --> query.ptk:1:18
  |
1 | Q = (a (b) @_ :: Foo)
  |                  ^^^
  |
help: wrap in parentheses
  |
1 - Q = (a (b) @_ :: Foo)
1 + Q = (a (b) @_ :: (Foo))
  |
